overflow x bug fixed.2

--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -6,3 +6,6 @@
   /* background-color: red; */
   
 }
+#root, .app, body, html {
+  overflow-x: hidden;
+}
