--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -10,7 +10,7 @@ body,html {
 }
 html, body, #root, .app {
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 code {
